--- a/src/app/feature/acnologin/achome/achome.component.html
+++ b/src/app/feature/acnologin/achome/achome.component.html
@@ -1,4 +1,2 @@
 <app-actopnav [sourcepage]="'achome'" (navclickevnt)="navclick($event)"></app-actopnav>
-<p>
-  achome works!
-</p>
+<router-outlet></router-outlet>
